--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -1,17 +1,11 @@
-$form-bg: #f8f9fa;
-$text-color: #333;
-
 .form {
-    max-width: 600px;
-    margin-inline: auto;
-    padding: 20px;
-    background-color: $form-bg;
+    padding: 1rem;
+    background-color: $gray-light;
 
     &__group {
         label {
             display: block;
             font-weight: bold;
-            margin-bottom: 3px;
             font-size: 1.125rem;
         }
     }
@@ -24,11 +18,11 @@ $text-color: #333;
     &__select {
         width: 100%;
         padding: 10px;
-        border: 1px solid darken($form-bg, 20%);
+        border: 1px solid darken($gray-light, 20%);
     }
 
     &__select {
-        color: $text-color;
+        color: $gray-dark;
         font-size: 16px;
         appearance: none;
         background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"><path d="M7 7l5 5 5-5z"/></svg>');
