--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -11,3 +11,15 @@
 .py-2{
     padding-block: 2rem;
 }
+
+.my-2{
+    margin-block: 2rem;
+}
+
+.mb-1{
+    margin-bottom: 1rem;
+}
+
+.bb-1 {
+    border-bottom: 1px solid $black;
+}
